--- a/content/news/2021/09/17/deref.adoc
+++ b/content/news/2021/09/17/deref.adoc
@@ -15,7 +15,7 @@ This week we released https://clojure.org/releases/devchangelog#v1.11.0-alpha2[C
 
 This was the https://ask.clojure.org/index.php/questions/clojure?sort=votes[most voted] open request on Ask Clojure and really stemmed from the big increase in qualified keyword usage from spec. In spec you might name a spec `:my.cool.domain/account` where "my.cool.domain" is not a "real" namespace that can be loaded, it's just a useful qualifier. You can of course use the full qualifier every time but that can be tedious.
 
-Clojure has long had namespace aliases, most commonly defined using the `:require` or `:use` clause of `ns`. However, both `require` and `use` bottom out in `load-file`, which loads the needed namespace before creating the alias. You can alternately use `create-ns` to create a runtime Namespace without loading, and then use `alias` to alias to it, and this has the most common workaround (sometimes with some macro goo around it to make it easier).
+Clojure has long had namespace aliases, most commonly defined using the `:require` or `:use` clause of `ns`. However, both `require` and `use` bottom out in `load-file`, which loads the needed namespace before creating the alias. You can alternately use `create-ns` to create a runtime Namespace without loading, and then use `alias` to alias to it, and this has been the most common workaround (sometimes with some macro goo around it to make it easier).
 
 We explored several different options for this, and they're enumerated in CLJ-2123. We looked at changing `alias` to automatically create a runtime namespace, but this would change `alias` semantics, possibly in ways that would impact existing users. We looked at creating a new kind of keyword-only alias (I prototyped this - it was a terrible mess to retain backward portability). We looked at expanding `ns` to include a variant of `alias`, but this one would have been a breaking change for the spec (this is kind of a tangent) and we think would have been a bit harder to cover for existing ns analyzers than where we ended up, which was to add a new `:as-alias` clause to `require`, that is essentially like :as, but does not require a loaded namespace.
 
