--- a/content/news/2021/09/17/deref.adoc
+++ b/content/news/2021/09/17/deref.adoc
@@ -37,7 +37,7 @@ Also, a highly voted old request, `update-keys` and `update-vals` are functions 
 
 **https://clojure.atlassian.net/browse/CLJ-1879[IKVReduce - make old slow path (IPersistentMap) faster and extend to Object, removing impl ambiguity]**
 
-This is kind of an old ticket, but had a direct impact on testing for update-keys and update-vals, which rely on the IKVReduce protocol. Protocols are an open extension mechanism where choices are made based on type matching (including Java inheritance). The IKVReduce protocol also has an associated Java interface IKVReduce which can be used by Java implementation classes needing to hook into the protocol (similar pattern is used in other places as well inside Clojre's impl). To cover this, the IKVReduce protocol is extended to both the IKVReduce interface (fast impl) and to the IPersistentMap interface (slow impl). If a concrete impl (like PersistentHashMap) matches multiple types, the "closest" one will match. However, PHM implements both of these and it's essentially a "tie". What we've seen over the years is that based on the ordering of things returned from reflection, it's possible for PHM to route to either of the two protocol extensions, sometimes leading to much slower results for reduce-kv.
+This is kind of an old ticket, but had a direct impact on testing for update-keys and update-vals, which rely on the IKVReduce protocol. Protocols are an open extension mechanism where choices are made based on type matching (including Java inheritance). The IKVReduce protocol also has an associated Java interface IKVReduce which can be used by Java implementation classes needing to hook into the protocol (similar pattern is used in other places as well inside Clojure's impl). To cover this, the IKVReduce protocol is extended to both the IKVReduce interface (fast impl) and to the IPersistentMap interface (slow impl). If a concrete impl (like PersistentHashMap) matches multiple types, the "closest" one will match. However, PHM implements both of these and it's essentially a "tie". What we've seen over the years is that based on the ordering of things returned from reflection, it's possible for PHM to route to either of the two protocol extensions, sometimes leading to much slower results for reduce-kv.
 
 We looked at a bunch of ways to resolve this - tweaks to reduce-kv, special cases for the built-in impls (PHM, PAM), adding a protocol preference system like multimethods have, etc. There are tradeoffs in all these approaches, some pretty significant. In the end we decided that another way to remove the ambiguity is to define the "slow fallback" implementation on Object, rather than on IPersistentMap. This widens the scope of what reduce-kv can be applied to, essentially changing it from "maps" to "colls that seq to map entries". The Object case is always a last resort case, so there is no longer any ambiguity - PHM will always take the "fast" through IKVReduce interface (self reduction). Also, this means that `reduce-kv` now works on java.util.Maps (another very old jira request) and potentially other useful things. Needless to say, there was a lot of perf testing done on this and several of the alternatives. Along the way, it seemed clear that the "slow" path fallback was a lot slower than it needed to be, so that was also rewritten for better performance. The major tradeoff in the solution we landed on is that `(satisfies? IKVReduce x)` is now true for everything. As an internal protocol rarely used directly, there is very little code in the wild doing anything like this (https://github.com/cgrand/xforms[xforms] is the most notable example we found and we've been consulting with Christophe about that one).
 
