Add in re:Clojure 2021
Also remove skillsmatter, as this conference no longer exists.

Remove also 4clojure.com, as this service is deprecated (and the website
gives a security warning).

-=david=-

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -43,7 +43,6 @@ Community:
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
 * http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
 * http://clojurekoans.com/[Clojure Koans] (http://clojurescriptkoans.com/[online])
-* http://www.4clojure.com/[4clojure] - Clojure practice problems
 * http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
 * https://guide.clojure.style/[Clojure Style Guide]
 * https://www.maria.cloud/[Maria] - a coding environment for beginners
@@ -107,7 +106,7 @@ Video training (commercial):
 * http://clojure-conj.org/[Clojure/conj] (usually in November)
 * http://www.clojurebridge.org/[ClojureBridge] - beginner workshops for women
 * https://clojutre.org[ClojuTRE] - A Clojure conference in Tampere/Helsinki, Finland
-* https://skillsmatter.com/conferences/10459-clojure-exchange-2018[Clojure eXchange] - A Clojure conference in London, UK
+* https://reclojure.org[re:Clojure] - A yearly community-driven Clojure conference, hosted online and with a worldwide attendance
 * https://clojured.de/[clojureD] - A Clojure conference in Berlin, Germany
 * https://heartofclojure.eu/[Heart of Clojure] - A Clojure conference in Leuven, Belgium
 * https://clojuredays.org/[Dutch Clojure Days] - A Clojure conference in Amsterdam, the Netherlands
