--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -404,6 +404,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * SparkFund
 * Spatial Informatics Group
 * Spinney
+* Splash Financial
 * Spotify
 * SquareVenue
 * Staples Exchange
