--- a/content/guides/tools_build.adoc
+++ b/content/guides/tools_build.adoc
@@ -11,10 +11,38 @@ toc::[]
 
 https://github.com/clojure/tools.build[tools.build] is a library of functions for building Clojure projects. They are intended to be used in a build program to create user-invokable target functions.
 
+== Builds are programs
+
+The philosophy behind tools.build is that your project build is inherently a program - a series of instructions to create one or more project artifacts from your project source files. We want to write this program with our favorite programming language, Clojure, and tools.build is a library of functions commonly needed for builds that can be connected together in flexible ways. Writing a build program does take a bit more code than other declarative approaches, but can be easily extended or customized far into the future, creating a build that grows with your project.
+
+To run your build programs, you will need two things - tools.build as a dependency, and the source path that contains your program. Builds are designed to be easily executed as a project "tool" in the Clojure CLI (with -T). In the Clojure CLI, "tools" are programs that provide functionality and do not use your project deps or classpath. Tools executed with -T:an-alias remove all project deps and paths, add `"."` as a path, and include any other deps or paths as defined in `:an-alias`.
+
+As such, you will need an alias in your deps.edn that defines the build classpath and includes the path to your build source, for example:
+
+[source,clojure]
+----
+{:paths ["src"]
+ :deps {;; project deps
+       }
+ :aliases
+ {:build {:deps {io.github.clojure/tools.build {:tag "TAG" :sha "SHA"}}
+          :ns-default build}}}
+----
+
 [NOTE]
 ====
 The git dep and Clojure CLI examples in this guide assume the use of Clojure CLI 1.10.3.933 or higher. It is possible to use tools.build with earlier versions of deps.edn/Clojure CLI but the deps.edn git coordinates and Clojure CLI commands will vary.
 ====
+
+As mentinoed above, running a tool with -T removes the project :paths and :deps. Using `-T:build` will use only the `:paths` and `:deps` from the `:build` alias. The root deps.edn is still included, which will pull in Clojure as well (but it would also come in as a dependency of tools.build). The :paths are not specified here, so no additional paths are added, however, `-T` includes the project root `"."` as a path by default.
+
+So executing `clj -T:build jar` will use an effective classpath here of `"."`, clojure (from the root deps.edn), tools.build (from the `:build` alias `:deps`), and the transitive dependencies included by those deps.
+
+The `:ns-default` specifies the default Clojure namespace to find the function specified on the classpath. Because the only local path is the default `"."`, we should expect to find the build program at `build.clj` in the root of our project. Note that the path roots (via the `:build` alias `:paths`) and the namespace of the build program itself relative to those paths roots are fully under your control. You may wish to put them in a subdirectory of your project too.
+
+And then finally, on the command line we specify the function to run in the build, here `jar`. That function will be executed in the `build` namespace, and there may be more than one option, and those functions can take kwarg style options as well. More on that below.
+
+The remainder of this guide demonstrates individual common use cases and how to satisfy them with tools.build programs.
 
 == Source library jar build
 
