--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -220,6 +220,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * IRIS.TV
 * J.Crew
 * JESI
+* JustOn GmbH
 * JUXT
 * Kane LPI
 * Kasta
