--- a/content/news/2021/08/20/deref.adoc
+++ b/content/news/2021/08/20/deref.adoc
@@ -28,7 +28,7 @@ Fogus has continued work on new https://ask.clojure.org/index.php/1926/adding-fu
 
 == Blogs
 
-* https://cuddly-octo-palm-tree.com/posts/2021-03-07-review-whyfp/[Review: Why FP Matters (Hughes)] - Carmen La
+* https://cuddly-octo-palm-tree.com/posts/2021-03-07-review-whyfp/[Review: Why FP Matters (Hughes)] - Gary Verhaegen
 * https://lambdaisland.com/blog/2021-08-18-a-tale-of-three-clojures[A Tale of Three Clojures] - Alys Brooks
 * https://www.juxt.pro/blog/radar-2021[JUXT Clojure Radar 2021]
 * http://allentiak.github.io/posts-output/2021-08-13-gsoc-partial-evaluation-report/[GSoC 2021 Partial Evaluation Report] - Leandro Doctors
