--- a/content/news/2021/10/14/deref.adoc
+++ b/content/news/2021/10/14/deref.adoc
@@ -24,8 +24,8 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 New releases and tools this week:
 
-* https://github.com/walmartlabs/lacinia[lacinia] 1.0 - https://twitter.com/jackrusher/status/1447879286262743040
-* https://github.com/walmartlabs/lacinia-pedestal[lacinia-pedestal] 1.0 - GraphQL implementation in pure Clojure
+* https://github.com/walmartlabs/lacinia[lacinia] 1.0 - GraphQL implementation in pure Clojure
+* https://github.com/walmartlabs/lacinia-pedestal[lacinia-pedestal] 1.0 - Expose Lacinia GraphQL as Pedestal endpoints
 * https://gitlab.com/glossa/weave[weave] 0.1.120 - Clojure data format and tools for weaving documents
 * https://github.com/paketo-buildpacks/clojure-tools[clojure-tools]  - A Cloud Native Buildpack that builds Clojure-based applications from source
 * https://github.com/askonomm/shh[shh]  - A CLI password manager designed for efficiency
@@ -44,5 +44,5 @@ New releases and tools this week:
 
 == Art
 
-Once again, some really nice work from Jack Rusher - https://twitter.com/jackrusher/status/1447950443137613828[this tweet] highlights a nice function and the Clojure code that made it, and [this tweet](https://twitter.com/jackrusher/status/1447879286262743040) credit's https://thi.ng[Karsten Schmidt's] excellent thi.ng geom libraries! We are fortunate to have such great tools to work with in Clojure.
+Once again, some really nice work from Jack Rusher - https://twitter.com/jackrusher/status/1447950443137613828[this tweet] highlights a nice function and the Clojure code that made it, and https://twitter.com/jackrusher/status/1447879286262743040[this tweet] credits https://thi.ng[Karsten Schmidt's] excellent thi.ng geom libraries! We are fortunate to have such great tools to work with in Clojure.
 
