--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -167,6 +167,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Flexiana
 * Flocktory
 * Flowa
+* Flybot
 * FORMCEPT
 * Framed Data
 * Freshcode
