--- a/content/guides/tools_build.adoc
+++ b/content/guides/tools_build.adoc
@@ -240,90 +240,6 @@ This build creates a jar with classes compiled from Java sources and your Clojur
 
 The `compile` task here can also be used as the prep task for this lib.
 
-== Build tasks
+== Task documentation
 
-Currently, tools.build comes packaged with the following tasks (see the https://clojure.github.io/tools.build[API] for details):
-
-.Build Tasks
-|===
-| Domain  | Function         | Description | Required Params | Optional Params
-
-| File
-| `delete`
-| Delete file or directory recursively, if it exists.
-| `:path`
-|
-
-| File
-| `copy-file`
-| Copy one file from source to target, creating target directories if needed.
-| `:src`, `:target`
-|
-
-| File
-| `copy-dir`
-| Copy the contents of the `:src-dirs` to the `:target-dir`, optionally perform text replacement.
-| `:src-dirs`, `:target-dir`
-| `:include`, `:replace`
-
-| File
-| `write-file`
-| Like `clojure.core/spit`, but create directories if needed.
-| `:path`
-| `:content`, `:opts`
-
-| Compilation
-| `javac`
-| Compile Java source to classes.
-| `:src-dirs`, `:class-dir`
-| `:basis`, `:javac-opts`
-
-| Compilation
-| `compile-clj`
-| Compile Clojure source to classes.
-| `:basis`, `:src-dirs`, `:class-dir`
-| `:compile-opts`, `:ns-compile`, `:filter-nses`
-
-| Artifact
-| `jar`
-| Create a jar file.
-| `:class-dir`, `:jar-file`
-| `:main`
-
-| Artifact
-| `uber`
-| Create an uberjar file.
-| `:class-dir`, `:uber-file`
-| `:basis`, `:main`
-
-| Artifact
-| `zip`
-| Create a zip file.
-| `:src-dirs`, `:zip-file`
-|
-
-| Process
-| `java-command`
-| Create command line args for a Java process from a basis.
-| `:basis`, `:main`
-| `:java-cmd`, `:java-opts`, `:main-args`
-
-| Process
-| `process`
-| Execute an external command.
-| `:command-args`
-| `:dir`, `:out`, `:err`, `:out-file`, `:err-file`, `:env`
-
-| Maven
-| `write-pom`
-| Write a pom file to class-dir, either by updating an existing POM or generating a new one from deps.edn
-| `:basis`, `:class-dir`
-| `:src-pom`, `:lib`, `:version`, `:src-dirs`, `:resource-dirs`, `:repos`
-
-| Maven
-| `install`
-| Install Maven jar to local repo.
-| `:basis`, `:lib`
-| `:classifier`, `:jar-file`, `:class-dir`
-|===
-
+See the https://clojure.github.io/tools.build[API docs] for detailed task documentation.
