Add DBS Bank to list of companies
A team in DBS Bank is using Clojure with XTDB for a metadata store

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -125,6 +125,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Datacraft
 * DataSnap.io
 * Datomic
+* DBS Bank
 * Debreuck Neirynck (DN)
 * Deep Impact
 * Degree9
