Added MoveNation to company list
Reference:
https://thehub.io/jobs/615ddcc58f938266cbd2acff

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -284,6 +284,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * modelogiq
 * Moleque de Ideias
 * Motiva AI
+* MoveNation
 * Multis
 * Mysema
 * nemCV.com
