--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -346,6 +346,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Point Slope
 * Pol.is
 * Postmark
+* PractiTest
 * Precursor
 * Premium Business Consultants BV
 * Prime.vc
