--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,13 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.998 (Oct 26, 2021) [[v1.10.3.998]]
+
+* Remove `bottle :unneeded` from brew formulas (no longer needed)
+* https://clojure.atlassian.net/browse/TDEPS-209[TDEPS-209] Include only jar files in classpath from Maven artifacts
+* Update to tools.tools v0.2.1 (minor improvements in `clj -Ttools list`)
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.12.1058
+
 === 1.10.3.986 (Sep 22, 2021) [[v1.10.3.986]]
 
 * Fix nested session cache computation for local pom model building
