--- a/content/news/2021/11/5/deref.adoc
+++ b/content/news/2021/11/5/deref.adoc
@@ -9,7 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Highlights
 
-This week brings a new version of https://github.com/clojure/clojurescript[ClojureScript]] - read the release notes for https://clojurescript.org/news/2021-11-04-release[ClojureScript 1.10.891]!
+This week brings a new version of https://github.com/clojure/clojurescript[ClojureScript] - read the release notes for https://clojurescript.org/news/2021-11-04-release[ClojureScript 1.10.891]!
 
 == Videos and podcasts
 
