fix podcast title

--- a/content/news/2021/11/19/deref.adoc
+++ b/content/news/2021/11/19/deref.adoc
@@ -29,7 +29,7 @@ Fogus has been doing some ongoing maintenance in the Cognitect aws-api and trans
 
 == Videos and podcasts
 
-* https://www.therepl.net/episodes/43/[The REPL podcast] - #78 Adrian Smith a.k.a phronmophobic
+* https://www.therepl.net/episodes/43/[The REPL podcast] - 43: Clojure, The Essential Reference with Renzo Borgatti
 * https://anchor.fm/lostinlambduhhs/episodes/Kira-McLean-Digital-Nomad-e1aeiqh[Lost in Lambduhhs podcast] - :Kira-McLean (Digital Nomad)
 * https://soundcloud.com/defn-771544745/78-adrian-smith-aka-phronmophobic?si=edbf610bd20e43e9a664a6269497fe37[defn podcast] - #78 Adrian Smith a.k.a phronmophobic
 * https://www.youtube.com/watch?v=hMEX6lfBeRM[Inside core.async Channels] - Rich Hickey from EuroClojure 2014 (new edit)
