--- a/content/news/2021/12/10/deref.adoc
+++ b/content/news/2021/12/10/deref.adoc
@@ -13,7 +13,7 @@ Several highlights to point out this week:
 
 * Thanks to the persistent efforts of Rob Stuttaford and the generosity of Slack, the Clojurians Slack channel now has a https://twitter.com/stewart/status/1466843623266283521[Pro account]!
 * https://twitter.com/NYSE/status/1468747415750598665[Nubank is now listed as NU on the NYSE] - fun to see Clojure devs at a bell ringing!
-* Clojure users https://www.wraltechwire.com/2021/12/09/durham-startup-kevel-raises-10m-plans-to-hire-more-workers-in-2022/[Kevel] (formerly Adzerk) raised $10M and is planning to do more hiring!
+* Clojure users https://www.wraltechwire.com/2021/12/09/durham-startup-kevel-raises-10m-plans-to-hire-more-workers-in-2022/[Kevel] (formerly Adzerk) raised $10M and are planning to do more hiring!
 * Daniel Slutsky https://clojureverse.org/t/rethinking-community-scope/[posted a request for discussion] on extending the great work the SciCloj folks have been doing around teaching and learning to the broader Clojure community
 
 == In the core
