--- a/content/news/2021/12/10/deref.adoc
+++ b/content/news/2021/12/10/deref.adoc
@@ -35,7 +35,7 @@ This week has been a bit scattered, but we continue to work through some tickets
 * https://brettrowberry.hashnode.dev/an-f-devs-perspective-on-clojure[An F# Dev's Perspective on Clojure] - Brett Rowberry
 * https://cyrik.github.io/day1.html[An adventure in clojure tooling, debug story-time] - Lukas Domagala
 * https://blog.wsscode.com/babashka-and-alfred/[Scripting with Babashka on Alfred] - Wilker Lucio
-* https://vlaaad.github.io/reveal-stickers[Reveal stickers] - Vlad Proczenko
+* https://vlaaad.github.io/reveal-stickers[Reveal stickers] - Vlad Protsenko
 * https://auth0.com/blog/create-an-api-server-with-clojure-and-pedestal/[Create an API server with Clojure and Pedestal] - Vincenzo Chianese
 * https://www.reddit.com/r/Clojure/comments/rbw8h0/clojure_high_performance_data_processing_updates/[Clojure High Performance Data Processing Updates] - Chris Nuernberger
 
